<resources>
    <string name="app_name">YellowDriver</string>
    <string name="WelcomeToCounter">Добро пожаловать в Счетчик</string>
    <string name="BeforeStartYouNeedAuth">Для начала работы вам необходимо авторизироваться</string>
    <string name="Login">ВХОД</string>
    <string name="OK">Понял</string>
    <string name="AuthNickError">Ошибка авторизации</string>
    <string name="SystemError">Ошибка системы</string>
    <string name="Saved">Сохранено</string>
    <string name="CouldNotSaved">Не удалось обновить данные профиля</string>
    <string name="YouNeedToGrandLocationPermission">Вы должны разрешить использовать геолокацию для начала работы</string>
    <string name="YouMustGranAlwaysOnTopPermission">Вы должны дать приложению право БЫТЬ ВСЕГДА СВЕРХУ</string>
    <string name="YouMustBatteryOptimizatinOff">Вы должны отключить оптимизацию батареи для этого приложения</string>
    <string name="Profile">Профиль</string>
    <string name="Empty"></string>
    <string name="Autologin">Автоматический вход</string>
    <string name="ArrivalTime">Время прибытия к клиенту</string>
    <string name="CloseAppQuestion">Закрыть приложение?</string>
    <string name="QuestionGoOffline">Перейти в автономный режим?</string>
    <string name="PREORDERS">ПРЕДВАРИТЕЛЬНЫЕ ЗАКАЗЫ</string>
    <string name="YouAcceptedCommonOrder">Вы взяли предварительный заказ</string>
    <string name="YourPreorderWasCanceled">Ваш предварительный заказ был отменен</string>
    <string name="SearchForAddress">Поиск адреса</string>
    <string name="Online">На линию</string>
    <string name="CloseSession">Закрыть смену</string>
    <string name="Navigator">Навигатор</string>
    <string name="NavigatorNightMode">Навигатор, ночной режим</string>
    <string name="GO">Поехали!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="QueryState">Запрос состояния</string>
    <string name="TrackTime">Время в пути</string>
    <string name="Amount">Сумма</string>
    <string name="Wait">Ожидание</string>
    <string name="Distance">Расстояние</string>
    <string name="ChooseFranchisee">ВЫБОР ТАКСОПАРКА</string>
    <string name="LoginByNickAndPassword">Вход по имени пользователя с паролем</string>
    <string name="Nickname">ПОЛЬЗОВАТЕЛЬ</string>
    <string name="Password">Пароль</string>
    <string name="Submit">Начать</string>
    <string name="Accept">Принять</string>
    <string name="PODACHA">Подача</string>
    <string name="ACTIVITY">АКТИВНОСТЬ</string>
    <string name="RATING">РЕЙТИНГ</string>
    <string name="TODAY">СЕГОДНЯ</string>
    <string name="RubSymbol">₽</string>
    <string name="CommissionTaken">зачислено на счет</string>
    <string name="Mileage">Километраж</string>
    <string name="Balance">Баланс</string>
    <string name="ChooseRoute">Выберите маршрут</string>
    <string name="TAXIMETER">ТАКСОМЕТР</string>
    <string name="OnRouteToHome">ДОМОЙ</string>
    <string name="OnRouteToWork">НА РАБОТУ</string>
    <string name="OrdersOnRoute">ЗАКАЗЫ ПО ПУТИ</string>
    <string name="ParkWasNotSelected">ТАКСОПАРК НЕ ВЫБРАН</string>
    <string name="Error">Ошибка</string>
    <string name="ErrorGetDriverPhoto">Невозможно скачать фото водителя с сервера</string>
    <string name="CITY">ГОРОД</string>
    <string name="ACCEPT">ПРИНЯТЬ</string>
    <string name="CHAT">ЧАТ</string>
    <string name="km">км</string>
    <string name="min">мин</string>
    <string name="OrderOn">Заказ на</string>
    <string name="m">м</string>
    <string name="RIDETIME">Время в пути</string>
    <string name="RIDEDISTANCE">Расстояние</string>
    <string name="firstcost">Начальная цена</string>
    <string name="CANCEL">Отменить</string>
    <string name="FINISHRIDE">ЗАВЕРШИТЬ ПОЕЗДКУ?</string>
    <string name="YES">ДА</string>
    <string name="IWillThink">Я подумаю</string>
    <string name="NO">НЕТ</string>
    <string name="OpenNavigator">Открыть навигатор</string>
    <string name="YandexNavigator">Яндекс навигатор</string>
    <string name="COUNTED">Начислено</string>
    <string name="WAITTIME">Ожидание</string>
    <string name="PAUSERIDE">ОЖИДАНИЕ?</string>
    <string name="CONTINUERIDE">ПРОДОЛЖИТЬ ПОЕЗДКУ?</string>
    <string name="QueryExecution">Выполнение запроса</string>
    <string name="InPlace">На месте</string>
    <string name="Call">Звонок</string>
    <string name="WayToClient">Путь до клиента</string>
    <string name="WayToDestination">Пункт назначения</string>
    <string name="Done">ВЫПОЛНЕНО</string>
    <string name="TOTALAMOUNT">ИТОГО</string>
    <string name="DISTANCE">РАССТОЯНИЕ</string>
    <string name="NEWORDER">ПОСТУПИЛ НОВЫЙ ЗАКАЗ</string>
    <string name="MAKEROUTE">ПРОЛОЖИТЬ МАРШРУТ</string>
    <string name="OrderHardReset">Принудительно завершить заказ</string>
    <string name="HistoryOfOrders">История заказов</string>
    <string name="StartDate">Начало заказа</string>
    <string name="Where">Подача</string>
    <string name="EndDate">Окончание заказа</string>
    <string name="From">Откуда</string>
    <string name="To">Куда</string>
    <string name="Slip">Слип</string>
    <string name="SlipNumber">Номер слипа</string>
    <string name="EnterAddress">Введите адрес</string>
    <string name="Save">Сохранить</string>
    <string name="background_location_permission_title">Права на получение координат</string>
    <string name="background_location_permission_message">Приложение YellowDriver собирает данные о местоположении в фоновом режиме, даже когда приложение закрыто или не используется, поскольку необходимо максимально верно расчитать пройденое расстояние, чтобы расчитать стоимость поездки. \n\n\n Yellow driver application collects location information on the background mode even if the application is closed or is not used because the passed distance should be given as true as possible in order to calculate the cost of the trip.</string>
    <string name="OrdersCount">Кол-во заказов</string>
    <string name="CommonOrders">Предварительные заказы</string>
    <string name="NothingSelected">Ничего не выбрано</string>
    <string name="ClientWasCancelOrder">Клиент отменил заказ</string>
    <string name="Info">Информация</string>
    <string name="GoOffline">Выйти с линии</string>
    <string name="CarOptions">Дополнительные опции</string>
    <string name="MISS">Пропустить</string>
    <string name="TypeYourMessageHere">Напишите ваше сообщение</string>
    <string name="ChatWithPassanger">Переписка с пассажиром</string>
    <string name="ChatWithDispatcher">Переписка с диспетчером</string>
    <string name="ImLate">Опоздание </string>
    <string name="HISTORY_OF_ORDERS">ИСТОРИЯ ЗАКАЗОВ</string>
    <string name="PaymentMethod">Метод оплаты</string>
    <string name="Cost">Стоимость</string>
    <string name="MyAddresses">Мои адреса</string>
    <string name="User">Пользователь</string>
    <string name="AddressRecognize">Определяем адрес...</string>
    <string name="Ready">Готово</string>
    <string name="Suggestions">Предложения</string>
    <string name="Metro">Метро</string>
    <string name="Railways">Вокзалы</string>
    <string name="Airports">Аэропорты</string>
    <string name="accepted">принятые</string>
    <string name="list">список</string>
    <string name="settings">настройки</string>
    <string name="WhereToGo">Куда едем</string>
    <string name="RejectOrder">Отменить заказ</string>
    <string name="Notifications">Уведомления</string>
    <string name="AddressOfClient">Адрес подачи</string>
    <string name="DistanceToClient">Расстояние до клиента</string>
    <string name="TimeToClient">Время в пути</string>
    <string name="Cash">Наличные</string>
    <string name="NoCash">Безнал</string>
    <string name="Card">Кредитной картой</string>
    <string name="Payment">Оплата</string>
    <string name="CarClass">Класс машины</string>
    <string name="CANCELORDER">ОТМЕНИТЬ</string>
    <string name="Route">Маршрут</string>
    <string name="FINISH">ЗАВЕРШИТЬ</string>
    <string name="Send">Отправить</string>
    <string name="Close">Закрыть</string>
    <string name="Additional">Дополнительно</string>
    <string name="OrderCanceled">Заказ был отменен</string>
    <string name="MissingInternet">Отсутствует\n подключение \n к интернету</string>
    <string name="LoadMoreHistory">Загрузить ещё</string>
    <string name="YouAreBlocked">Вы заблокированы</string>
    <string name="SelectAdmin">Выберите собеседника</string>
    <string name="Me">Я</string>
    <string name="CheckStatus">Проверить статус</string>
    <string name="TimeLeft">Осталось</string>
    <string name="FinishPointMustBeSet">Не задан пункт назначения</string>
    <string name="Logout">Завершить сеанс</string>
    <string name="CloseApp">Закрыть приложение</string>
    <string name="RentTimeWarning">Истекает время аренды</string>
    <string name="RentCar">Аренда автомобиля</string>
    <string name="ConfirmOrder">Взять заказ?</string>
    <string name="StartOrder">Взять предварительный заказ?</string>
    <string name="StartCommonOrder">Начать срочный заказ?</string>
    <string name="Company">Компания</string>
    <string name="AcceptOrder">Взять заказ?</string>
    <string name="CancelPreorderQuestion">Отменить предварительный заказ?</string>
    <string name="ACTIVEPREORDERS">ПРИНЯТЫЕ</string>
    <string name="PREORDERSLIST">СПИСОК</string>
    <string name="privacypolicy">Политика конфидециальности \n Privacy policy</string>
    <string name="patronymic_name">Отчество</string>
    <string name="name">Имя</string>
    <string name="saved">сохранено</string>
    <string name="nickname">Ник</string>
    <string name="surname">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Эл. почта</string>
    <string name="Update">обновить</string>
    <string name="ConfirmPreorder">Подтвердите выполнение предварительного заказа</string>
    <string name="LangscapeOrientation">Альбомная ориентация</string>
    <string name="title_file_download">Загрузка</string>
    <string name="downloading">Загрузка нового установочного пакета</string>
    <string name="YouMustGrantInstallPermissionFromUnknownSource">Разрешите установку приложения из неизвестных источников</string>
    <string name="SetHost">Установить сервер</string>
    <string name="OrderStartTime">Время прибытия к клиенту</string>
    <string name="frame">корпус</string>
    <string name="house">дом</string>
    <string name="comment">коментарий</string>
    <string name="structure">строение</string>
    <string name="entrance">подъезд</string>
    <string name="chat">Переписка</string>
    <string name="YouNeedCameraPermission">Вы должны разрешить использование камеры</string>
    <string name="passanger">Пассажир</string>
    <string name="dispatcher">Диспетчер</string>
    <string name="you_take_order">Вы взяли срочный заказ</string>
    <string name="ClearChat">Очистить</string>
    <string name="GoodsMorning">Доброе утро</string>
    <string name="GoodEvening">Добрый вечер</string>
    <string name="GoodDay">Добрый день</string>
    <string name="BALANCE">ОБОРОТ</string>
    <string name="RATE">ОЦЕНКА</string>
    <string name="Remember">Запомнить</string>
    <string name="Stop">Остановка</string>
    <string name="OrderCanceldByDispatcher">Заказ был отменен диспетчером</string>

</resources>
