<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/txtViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/OpenNavigator"
        android:textSize="@dimen/bigFont"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorGray" />

    <LinearLayout
        android:id="@+id/llOpenNavigator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/navigation" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/bigFont"
            android:text="@string/YandexNavigator" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/arrowright" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/Close"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
