<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.ChatActivity">

    <LinearLayout
        android:id="@+id/ltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/back" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/chat"
            android:textAllCaps="true" />
    </LinearLayout>

    <View
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="2dp"
        style="@style/HeaderSeparatorView"
        app:layout_constraintTop_toBottomOf="@id/ltop" />

    <LinearLayout
        android:id="@+id/llorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div">

        <Button
            android:id="@+id/btnActivePreorders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_tab_inactive"
            android:text="@string/dispatcher" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_tab_inactive"
            android:text="@string/Info" />

        <Button
            android:id="@+id/btnPreordersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_tab_active"
            android:text="@string/passanger" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/llsendtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llorders" />

    <LinearLayout
        android:id="@+id/llsendtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/TypeYourMessageHere"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/send"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:padding="5dp"
            app:srcCompat="@drawable/send" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>