<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".Activities.CommonOrderActivity">

    <ImageView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loading"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llheader" />

    <LinearLayout
        android:id="@+id/llheader"
        style="@style/LinearVLayoutHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout style="@style/LinearHLayoutHeader">

            <LinearLayout
                android:id="@+id/back"
                style="@style/LinearLayoutButton">

                <ImageButton style="@style/ImageButtonInsideLinearLayout" />
            </LinearLayout>

            <TextView
                style="@style/HeaderTextView"
                android:text="@string/PREORDERS" />
        </LinearLayout>

        <View style="@style/HeaderSeparatorView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/llheader">

        <Button
            android:id="@+id/btnPreordersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_tab_active"
            android:text="@string/PREORDERSLIST" />

        <Button
            android:id="@+id/btnActivePreorders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_tab_inactive"
            android:text="@string/ACTIVEPREORDERS" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llorders" />

</androidx.constraintlayout.widget.ConstraintLayout>